18_reverse_str/grade.txt
Grading at Sat Jun 27 13:54:16 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:11:13: error: ‘temp’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       str[i]=temp;
             ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
